# fractalmind

./: .env.example  .env.ollama-key-reference.md  .gitignore  API_REFERENCE.md  ARTICLE_DEVTO.md  BENCHMARKS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  FRACTAL_MIND_CORE_SPEC.md  GITHUB_HERO.md  ISSUE_TEMPLATES.md  MAKE_GIF.md  MODELOS_FRACTALES_IMPLEMENTACION.md  MULTI_PROVIDER_SUPPORT.md  POSTS.md  README.md  ROADMAP.md  SOCIAL_MEDIA.md  SPONSORING.md  dev.sh  docker-compose.yml  fix-and-build.sh
.github/workflows/: ci.yml
docs/: GUIA_USO_MODELOS_FRACTALES.md  LLM_MODULE.md  OpenClaw_INTEGRATION.md  PROGRESS_TRACKING.md
examples/: llm_usage.rs
searxng/: searxng-config.yml
src/: lib.rs  main.rs
src/api/: error.rs  handlers.rs  mod.rs  progress.rs  routes.rs  types.rs
src/cache/: config.rs  embedding_cache.rs  entry.rs  lru_cache.rs  mod.rs  node_cache.rs
src/db/: connection.rs  mod.rs  queries.rs  schema.rs
src/embeddings/: config.rs  fastembed_provider.rs  mock_provider.rs  mod.rs  provider.rs  service.rs
src/graph/: cluster.rs  config.rs  mod.rs  raptor.rs  similarity.rs  sssp.rs
src/models/: edge.rs  embedding.rs  mod.rs  namespace.rs  node.rs  upload_session.rs
src/models/llm/: brain.rs  config.rs  fractal_model.rs  gguf_parser.rs  mod.rs  strategy.rs  traits_llm.rs
src/models/llm/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/services/: config.rs  fractal_builder.rs  mod.rs  model_conversion.rs  rem_phase.rs  rem_scheduler.rs  web_search.rs
src/services/ingestion/: chunker.rs  config.rs  mod.rs  service.rs
src/services/ingestion/extractors/: image.rs  mod.rs  pdf.rs  text.rs
src/services/storage/: mod.rs
src/services/upload/: mod.rs
src/utils/: mod.rs
tests/: integration_ingest_handler.rs  integration_ingestion_service.rs
tests/fixtures/samples/: sample.txt
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  ChunkedUploader.tsx  IngestFileUploader.tsx  ModelManager.tsx  SettingsModal.tsx  Sidebar.tsx  index.ts
ui/src/components/__tests__/: IngestFileUploader.test.tsx
ui/src/hooks/: index.ts  useApi.ts
ui/src/services/: api.ts
ui/src/stores/: chatStore.ts  index.ts  settingsStore.ts
ui/src/styles/: index.css
ui/src/types/: index.ts  models.ts
