[package]
name = "fractalmind-app"
version = "0.1.0"
description = "Fractal-Mind Desktop Application"
authors = ["Fractal-Mind"]
edition = "2021"

[lib]
name = "fractalmind_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
